--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,21 @@
-# Compiled class file
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+
+/out/
+/classes/
+/bin/
+/web/WEB-INF/classes/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Custom ignores
+/build.properties
+/web/context.xml
+/*.jar
