- ADD: Added exif parsing capabilities. - ADD: Added thumbnails. - ADD: Added /album/{albumId} call. - ADD: Added /image/{imageId} call. - ADD: Added /album/{albumId}/img call. - ADD: Added /tag/{tagId}/image/count call. - ADD: Added basePath property to set the base path fo the image folder.

--- a/build.xml
+++ b/build.xml
@@ -61,6 +61,7 @@
 				<filter token="database.password" value="${database.password}"/>
 				<filter token="database.url" value="${database.url}"/>
 				<filter token="api.version" value="${api.version}"/>
+				<filter token="base.path" value="${base.path}"/>
 			</filterset>
 		</copy>
 
