--- a/web/context.xml.template
+++ b/web/context.xml.template
@@ -8,4 +8,5 @@
 <Parameter name="database" value="@database.url@" override="true" />
 <Parameter name="username" value="@database.username@" override="true" />
 <Parameter name="password" value="@database.password@" override="true" />
+<Parameter name="basePath" value="@base.path@" override="true" />
 </Context>
