- FIX: Fixed exif parsing issues where wrong fields were imported. - ADD: Added image tag/keyword importing. - ADD: Added thumbnail creation code. - FIX: Fixed a database connection leak. - ADD: Added multithreading to image import.

--- a/web/context.xml.template
+++ b/web/context.xml.template
@@ -9,4 +9,5 @@
 <Parameter name="username" value="@database.username@" override="true" />
 <Parameter name="password" value="@database.password@" override="true" />
 <Parameter name="basePath" value="@base.path@" override="true" />
+<Parameter name="version"  value="@api.version@" override="true" />
 </Context>
