- ADD: Added (optional) inclusion of /dist/ directory from Vue.js client into the .war file.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,7 +19,7 @@
 
 	<servlet-mapping>
 		<servlet-name>Frickl</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/api/*</url-pattern>
 	</servlet-mapping>
 
 	<!-- LISTENERS -->
