--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /classes/
 /bin/
 /web/WEB-INF/classes/
+/web/dist
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
