--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ tomcat.manager.version=tomcat8x
 tomcat.manager.protocol=http
 tomcat.manager.hostname=localhost
 tomcat.manager.port=8080
-tomcat.manager.username=baz
-tomcat.manager.password=baz
+tomcat.manager.username=sr41756
+tomcat.manager.password=sebastian
 
 project.name=frickl
 
