--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 /bin/
 /web/WEB-INF/classes/
 /web/dist
+/client/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
