--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,9 @@ compileJava.options.encoding = 'UTF-8'
 group 'uk.co.raubach.frickl'
 version '1.2.0'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
-    jcenter()
     mavenCentral()
     maven {
         url 'https://repo.spring.io/plugins-release/'
@@ -39,12 +38,10 @@ repositories {
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
 
-    implementation 'org.restlet.jee:org.restlet:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.servlet:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.json:2.4.0'
-    implementation 'org.restlet.jee:org.restlet.ext.gson:2.3.6'
-    implementation 'org.restlet.jee:org.restlet.ext.fileupload:2.4.0'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
+
     implementation 'org.json:json:20160212'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     implementation 'org.flywaydb:flyway-core:4.0.2'
     implementation 'mysql:mysql-connector-java:8.0.16'
@@ -52,10 +49,9 @@ dependencies {
     implementation 'org.jooq:jooq-codegen:3.11.10'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
-
     implementation 'javax.activation:activation:1.1.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
 
     implementation 'commons-io:commons-io:2.6'
     implementation 'commons-fileupload:commons-fileupload:1.4'
@@ -66,6 +62,13 @@ dependencies {
     implementation 'net.coobird:thumbnailator:0.4.11'
 
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
+    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.34'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.34'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:2.34'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
+
+    // CORS wizardry
+    implementation 'com.thetransactioncompany:cors-filter:2.10'
 }
 
 // Runs the JOOQ code generation
