--- a/build.gradle
+++ b/build.gradle
@@ -38,37 +38,30 @@ repositories {
 dependencies {
     compile fileTree(dir: 'lib', include: ['*.jar'])
 
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-
-    implementation 'org.json:json:20160212'
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.json:json:20220320'
+    implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation 'org.flywaydb:flyway-core:4.0.2'
-    implementation 'mysql:mysql-connector-java:8.0.16'
+    implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'org.jooq:jooq:3.11.10'
     implementation 'org.jooq:jooq-codegen:3.11.10'
 
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'javax.activation:activation:1.1.1'
-    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.3'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.3'
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
 
-    implementation 'commons-io:commons-io:2.6'
-    implementation 'commons-fileupload:commons-fileupload:1.4'
-    implementation 'joda-time:joda-time:2.10.2'
-    implementation 'com.drewnoakes:metadata-extractor:2.11.0'
-    implementation 'com.adobe.xmp:xmpcore:5.1.3'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'com.drewnoakes:metadata-extractor:2.17.0'
+    implementation 'com.adobe.xmp:xmpcore:6.1.11'
 
-    implementation 'net.coobird:thumbnailator:0.4.16'
+    implementation 'net.coobird:thumbnailator:0.4.17'
 
-    providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
-    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:2.34'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:2.34'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:2.34'
-    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.34'
-
-    // CORS wizardry
-    implementation 'com.thetransactioncompany:cors-filter:2.10'
+    providedCompile 'jakarta.servlet:jakarta.servlet-api:5.0.0'
+    implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-servlet:3.0.4'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.4'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.0.4'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.4'
 }
 
 // Runs the JOOQ code generation
