- ADD: Added Plausible tracking support.

--- a/config.template.properties
+++ b/config.template.properties
@@ -1,6 +1,8 @@
 authentication.enabled=true
 config.file=
 
+public.url=
+
 database.server=localhost
 database.name=frickl
 database.username=root
@@ -11,3 +13,10 @@ base.path=
 
 admin.username=
 admin.password=
+
+# Plausible Analytics information (https://plausible-tracker.netlify.app/globals#plausibleinitoptions)
+plausible.domain    =
+plausible.hash.mode =
+plausible.api.host  =
+
+google.analytics.key=
