- CHG: Updated Gradle wrapper - CHG: Updated to Java 21. - FIX: Fixed /image/{id} GET endpoint. -

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,1 @@
-tomcat.manager.version=tomcat10x
-tomcat.manager.protocol=http
-tomcat.manager.hostname=localhost
-tomcat.manager.port=8180
-tomcat.manager.username=sr41756
-tomcat.manager.password=sebastian
-
-project.name=frickl-next-api
+project.name=frickl-next
