--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ compileJava.options.encoding = 'UTF-8'
 group = 'raubach.frickl.next'
 version '2.0.0'
 
-sourceCompatibility = 21
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+}
 
 repositories {
     mavenCentral()
@@ -32,12 +34,12 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'lib', include: ['*.jar'])
 
-    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'commons-io:commons-io:2.19.0'
 
-    implementation 'org.json:json:20220924'
+    implementation 'org.json:json:20250517'
     implementation 'com.google.code.gson:gson:2.10'
 
-    implementation 'mysql:mysql-connector-java:8.0.31'
+    implementation 'com.mysql:mysql-connector-j:9.3.0'
 
     implementation 'org.jooq:jooq:3.16.18'
     implementation 'org.jooq:jooq-codegen:3.16.18'
@@ -56,9 +58,9 @@ dependencies {
     implementation 'com.drewnoakes:metadata-extractor:2.17.0'
     implementation 'com.adobe.xmp:xmpcore:6.1.11'
 
-    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.1'
-    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.1'
+    implementation 'org.glassfish.jersey.containers:jersey-container-servlet:3.1.3'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.3'
+    implementation 'org.glassfish.jersey.media:jersey-media-multipart:3.1.3'
 
     compileOnly 'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
