--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,8 @@
 project.name=frickl-next
+
+tomcat.manager.version=tomcat9x
+tomcat.manager.protocol=http
+tomcat.manager.hostname=localhost
+tomcat.manager.port=8180
+tomcat.manager.username=sr41756
+tomcat.manager.password=sebastian
